--- a/block-BHaaak/index.html
+++ b/block-BHaaak/index.html
@@ -20,3 +20,156 @@
 
 - use appropriate semantic tags and keep the nesting and indentation clean.
 - All the absolute must open in a new window. -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>know more html & css</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>List of Article</h1>
+
+      <nav>
+        <a href="#">about</a>
+        <a href="../block-BHaaak/about.html">contact</a>
+        <a href="../block-BHaaak/service.html">service</a>
+        <a href="googlo">google</a>
+      </nav>
+      <h2>Lorem ipsum dolor sit</h2>
+      <section>
+        <img
+          src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+          alt="assiment-html1"
+          height="300"
+          width="500"
+        />
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
+          consequatur placeat molestiae! Quod dignissimos laborum nostrum
+          officiis aperiam porro, illum asperiores sequi aut soluta id, qui
+          ullam deleniti, voluptas unde? Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Eveniet, necessitatibus! Saepe facere praesentium
+          accusantium eveniet dolorem maiores dolore earum, incidunt
+          reprehenderit. Iure, voluptates magni. Blanditiis doloribus dolore
+          expedita eos ut! Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Aspernatur dignissimos, fugiat consequuntur dolor veritatis
+          laudantium consectetur facere labore nam ratione blanditiis enim
+          tempora! Hic ratione, quasi veniam delectus facere voluptatem!
+          <br /><br />
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque,
+          obcaecati voluptas! Unde quod commodi mollitia tempora. Debitis
+          consequuntur magnam atque, illo sit id nisi dolorum dicta tenetur
+          neque deserunt aspernatur! Lorem, ipsum dolor sit amet consectetur
+          adipisicing elit. Beatae consequatur cupiditate optio nostrum
+          obcaecati architecto quibusdam voluptatum, dolorum impedit itaque
+          fugit deleniti quidem maxime velit aliquid! Aperiam voluptatibus
+          dolores illo. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Explicabo debitis nisi ab adipisci quae eveniet at fuga distinctio
+          quod incidunt quam delectus laborum sapiente, doloremque a, nobis
+          ipsam dolores vero. Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Esse quo, asperiores, ab optio vel molestias culpa delectus,
+          fugit placeat molestiae necessitatibus assumenda! Nam atque vitae,
+          porro esse hic eius quaerat? Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Repellat sint similique recusandae explicabo rerum
+          ratione, officiis soluta magnam repudiandae! A non ex cum doloremque
+          rem praesentium fuga assumenda, neque nostrum. Lorem ipsum dolor sit
+          amet consectetur adipisicing elit. Vel odio placeat minima omnis
+          impedit, consequatur beatae atque cumque vitae, exercitationem enim
+          libero modi quam inventore. Labore expedita optio reiciendis voluptas.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum impedit
+          praesentium illum officia sunt quidem eligendi incidunt asperiores
+          quas dignissimos, molestias natus, earum explicabo veniam nisi quod
+          voluptatum. Quasi, nobis! Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Ex nam ipsa nobis eum quia voluptatibus debitis,
+          dicta amet similique? Accusantium, quia! Veritatis eaque atque ab?
+          Reiciendis hic atque aut veniam! Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Soluta natus consectetur corporis, nihil
+          nemo ut non similique quos placeat, sint eveniet a sapiente alias
+          accusamus sed voluptatum commodi quasi magni?<br /><br />
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid harum
+          provident voluptate in ut, iste consectetur quibusdam vero nihil?
+          Dicta rerum minima atque sint quasi velit sequi nostrum expedita quis!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+          nesciunt quas, facere voluptatem iste quis quam recusandae
+          voluptatibus, assumenda temporibus dolore placeat at impedit alias
+          eveniet cupiditate omnis velit ad! Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Veritatis voluptatum a nobis consequatur
+          minima! Praesentium nam mollitia rem eius facere eaque? Consectetur
+          eius aperiam dignissimos odio vero? Molestiae, quaerat saepe? Lorem
+          ipsum dolor sit amet consectetur, adipisicing elit. Placeat ullam
+          recusandae libero quisquam facere rem similique nemo voluptatem
+          deleniti temporibus! Doloribus, rem suscipit cumque autem nihil amet
+          eos molestias quod?
+        </p>
+        <h2>Ipsul Dolor Amet</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+          perferendis fugit at sint? Minima repudiandae ipsum magnam, officia,
+          magni nulla dolorem deleniti cum quidem nisi unde quos, ut sit quia.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio,
+          excepturi harum expedita, molestiae nemo labore modi odit quas eveniet
+          neque, ipsum non debitis autem aut quos doloremque dicta consectetur
+          quae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+          ut numquam consequuntur quidem itaque, quae sapiente consectetur in
+          exercitationem. Est obcaecati dolorem eaque facilis aliquam tenetur
+          consequatur fugiat, maiores similique. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Molestiae, nostrum. Dolorum hic
+          molestias iusto incidunt corrupti, commodi dolor possimus, harum natus
+          aut laboriosam totam? Maiores soluta officia nihil corrupti
+          cupiditate?
+        </p>
+        <h2>Quai Doller Currept</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam
+          vel ipsa delectus dolorem, aspernatur iste numquam, cumque, maiores a
+          fugiat molestias reiciendis doloremque laudantium qui architecto
+          explicabo! Vitae, ad porro! Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Asperiores mollitia quidem quo perspiciatis ab
+          expedita inventore quisquam, dicta at laboriosam fugiat nesciunt, sed
+          alias? Deleniti consectetur sequi doloribus voluptatum nemo. Lorem
+          ipsum dolor, sit amet consectetur adipisicing elit. Molestias possimus
+          ipsam modi earum dignissimos mollitia magnam, voluptate incidunt
+          pariatur repudiandae doloremque esse vitae alias quisquam, officiis
+          praesentium optio velit natus? Lorem, ipsum dolor sit amet consectetur
+          adipisicing elit. Consectetur doloremque rerum vitae, provident libero
+          amet fuga quasi, voluptate adipisci, dolor deserunt sapiente. Quisquam
+          tempore autem ipsa. Vel veritatis totam porro.
+        </p>
+        <h2>Labor Dolerum Currupti</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
+          error eaque maxime totam, facere ipsam delectus qui numquam, aut quia
+          illum similique molestiae. Nesciunt odit fugit deleniti, debitis et
+          odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+          at numquam, eaque nostrum animi amet magni laudantium possimus eius
+          et. Aspernatur possimus culpa maiores minus nihil, omnis similique vel
+          iste? Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+          odit, libero laudantium corporis eius quae odio praesentium et velit
+          maiores ipsa magnam facilis nihil ea, non reiciendis, illo in
+          adipisci? Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Nostrum sit nam consequuntur cumque sapiente, tenetur necessitatibus
+          voluptates quis ipsum, rem non nobis quos, id perspiciatis animi
+          architecto est accusamus eaque! Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Error quo dolor perferendis eius enim mollitia!
+          Inventore id architecto impedit repudiandae aliquam quibusdam ab
+          officiis? Vero natus consectetur nulla veritatis harum!
+        </p>
+      </section>
+    </header>
+    <footer>
+      <h3>footer</h3>
+      <nav>
+        <a class="footer" href="#"> Facebook</a>
+        <a class="footer" href="#"> Instagram</a>
+        <a class="footer" href="#"> Twitter</a>
+      </nav>
+      <button class="button">Mail me</button>
+      <button class="button">Back to top</button>
+    </footer>
+  </body>
+</html>
