html css assignment 2

--- a/block-BHaaam/index.html
+++ b/block-BHaaam/index.html
@@ -18,3 +18,137 @@
 7. Using CSS resets is necessary.
 
 - use appropriate semantic tags and keep the nesting and indentation clean. -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>index</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1 class="h1">This is our third assignment</h1>
+    </header>
+    <main class="main">
+      <nav class="nav">
+        <a href="#">home</a>
+        <a href="../block-BHaaam/about.html">about</a>
+        <a href="../block-BHaaam/service.html">service</a>
+      </nav>
+      <article class="article">
+        <img
+          src="https://images.unsplash.com/photo-1540952332099-18a274a01804?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80"
+          alt=" good image "
+          height="300"
+          width="500"
+        />
+        <p class="article-p">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+          quasi nemo earum voluptates quos aut nostrum ex sunt, esse eligendi
+          quaerat qui vero. Voluptate aliquam, quia eveniet quos repellat amet.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla esse
+          assumenda doloribus accusantium! Voluptatibus architecto possimus,
+          praesentium nihil reiciendis quae! Cupiditate aut corporis a incidunt,
+          adipisci possimus consectetur porro molestias. Lorem ipsum, dolor sit
+          amet consectetur adipisicing elit. Ea explicabo quas soluta dolorum
+          aspernatur vel. Laborum animi ex laboriosam impedit quas minima esse
+          tempore accusantium obcaecati, praesentium eligendi? Distinctio, a?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+          deleniti ducimus sunt laudantium, amet accusantium, in neque est
+          temporibus, tempore exercitationem tenetur alias sequi facilis. Veniam
+          esse praesentium quia debitis. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Rerum velit necessitatibus itaque vitae asperiores
+          aperiam omnis officiis animi aut saepe. Rerum libero ipsam nesciunt
+          nulla assumenda error sed. Similique, beatae? Lorem ipsum dolor, sit
+          amet consectetur adipisicing elit. Quaerat blanditiis neque,
+          necessitatibus totam veritatis quod labore consequatur, quae porro
+          quis animi, aut architecto ratione magnam odit provident! Praesentium,
+          vel fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Reprehenderit quos mollitia esse aliquam, similique porro excepturi
+          aspernatur ex dolorum eaque, aliquid laudantium, nisi neque nulla
+          alias pariatur inventore vitae soluta. Lorem, ipsum dolor sit amet
+          consectetur adipisicing elit. Perferendis, sit! Reprehenderit aut
+          excepturi possimus tempora ipsum quo, exercitationem quos tempore
+          maxime! Minus architecto beatae nam ea ipsa deserunt deleniti sequi!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestias
+          amet voluptate ipsum vero perspiciatis vel eligendi expedita quo
+          culpa, ducimus quod hic corporis deleniti saepe nam rem eius optio .
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex a,
+          veritatis ipsum quia dolore reiciendis iure corporis, quo
+          necessitatibus expedita illum exercitationem! Inventore delectus
+          suscipit nam neque tempora, fugiat at. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Cumque dicta voluptates dignissimos
+          dolores nam incidunt, odio eum tenetur nostrum maiores alias natus
+          tempora qui consequatur molestiae ipsa eveniet odit minus. Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Sunt culpa aspernatur
+          aperiam quos accusantium minus reprehenderit illum illo labore quae
+          placeat, omnis laborum. Nostrum, deserunt reprehenderit accusamus
+          necessitatibus possimus similique. Lorem, ipsum dolor sit amet
+          consectetur adipisicing elit. Deserunt quibusdam aut adipisci, a
+          tempore porro, quos iste praesentium inventore officiis illum, optio
+          accusamus labore. Nesciunt, repellendus laborum. Voluptates, eos!
+          Placeat? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          Sint fugiat pariatur, aliquid at accusantium saepe deserunt error
+          voluptate sed blanditiis facilis quae odio iste, sequi eos sunt omnis
+          sapiente consequatur? Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Excepturi, modi voluptatum nisi ut minima
+          repellendus hic doloremque! Velit, ullam impedit. Ipsa fugiat ipsum
+          laboriosam error quas porro eius non commodi. Lorem ipsum dolor sit,
+          amet consectetur adipisicing elit. Magnam, doloribus? Delectus alias
+          natus dolore sunt dolorem totam cumque odit minima dolorum, sint eum,
+          labore ipsam quia itaque error magnam? Nesciunt.
+        </p>
+        <img
+          src="https://images.unsplash.com/photo-1541498968041-951c812b8a66?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80"
+          alt=" good image "
+          height="400"
+          width="700"
+        />
+        <p class="article-p">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+          incidunt totam excepturi vel blanditiis fugiat alias, qui nihil quos
+          quaerat, quod repellat soluta hic labore consequuntur amet? Facilis,
+          voluptatum id! Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Tempore repellendus voluptatem corrupti voluptates, magni
+          blanditiis quasi voluptatum. Cumque a, possimus rem, nobis, numquam
+          magnam corrupti eos mollitia maxime officia eum? Lorem ipsum dolor sit
+          amet consectetur, adipisicing elit. Nisi culpa provident laboriosam
+          est, ut, quaerat sapiente debitis totam magni repudiandae dolores quam
+          illum obcaecati veniam excepturi exercitationem architecto velit
+          vitae. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo
+          libero perferendis, iusto deserunt fuga asperiores cupiditate
+          excepturi, fugit obcaecati cumque aperiam, a tenetur laudantium error
+          esse eius. Velit, deserunt animi. Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Doloribus, ad placeat? Nostrum suscipit
+          perspiciatis expedita incidunt atque ratione cupiditate voluptate est
+          obcaecati. Illo non voluptate, temporibus nam et architecto fugit.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quaerat
+          magni officiis facere possimus fugit numquam quas minima nobis.
+          Adipisci, mollitia doloremque nostrum dicta aperiam recusandae
+          consequatur tempora saepe ducimus! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Eius nisi nobis voluptatum? Recusandae
+          blanditiis explicabo deleniti animi et illum, rerum nesciunt soluta
+          rem voluptatum fuga ex. Illo numquam sequi ipsam? lo Lorem ipsum dolor
+          sit, amet consectetur adipisicing elit. Ut explicabo, hic vel
+          repudiandae est architecto quod necessitatibus aut modi quas sunt
+          eligendi. Temporibus nobis at blanditiis voluptates iusto similique
+          veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Ipsum, fuga a. Dolor fuga nesciunt, nam pariatur est fugit recusandae
+          temporibus, distinctio, quam similique iure deserunt porro provident
+          quia placeat hic? Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Qui hic dolor reprehenderit obcaecati consectetur, magnam sequi
+          neque nesciunt enim ea blanditiis corrupti, repudiandae, libero
+          ratione autem nostrum expedita quibusdam sapiente? Lorem ipsum dolor
+          sit amet consectetur, adipisicing elit. Itaque, corrupti dolorum.
+          Dolor consequatur quisquam, accusantium dolores minima sed a soluta
+          recusandae ea nihil magni? Quos ipsa ipsum velit minima suscipit?
+        </p>
+      </article>
+    </main>
+    <footer>
+      <h2 class="footer">This is our first page</h2>
+    </footer>
+  </body>
+</html>
