html css assignment 3

--- a/block-BHaaan/index.html
+++ b/block-BHaaan/index.html
@@ -18,3 +18,84 @@
 - Use appropriate semantic tags and keep the nesting and indentation clean.
 
 -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>assignment3</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="header">
+        <a class="nav" href="#">HOME</a>
+        <a class="nav" href="#">ABOUT</a>
+        <a class="nav" href="#">BLOG</a>
+      </nav>
+    </header>
+    <main>
+      <section class="container">
+        <article>
+          <h4 class="article">NOVENBER 25 2015</h4>
+          <img
+            class="img"
+            src="https://images.unsplash.com/photo-1600797240005-838eb1552957?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+            alt="cat"
+          />
+          <h2>This Is My First Article</h2>
+          <p class="article-p">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis,
+            quibusdam dolorem? Saepe necessitatibus quaerat in iusto vitae
+            voluptas distinctio exercitationem quidem ea, quis veritatis libero
+            qui nihil aliquam quod ex. <br /><br />
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Accusantium voluptatem autem non, perspiciatis fugit voluptatum,
+            libero iure mollitia vitae ipsum eligendi! Iure, corrupti? Nobis
+            fugiat adipisci, voluptate ipsam fuga velit. <br />
+            <br />
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum sit
+            architecto minima non reiciendis omnis ullam nesciunt eveniet
+            obcaecati, ducimus in ut quasi, veritatis, sunt voluptatem sed.
+            Voluptas, error rerum?
+          </p>
+          <a  class="pra-end"href="#">read more</a>
+        </article>
+        <hr />
+      </section>
+
+      <section class="container">
+        <h4 class="article">DECEMBER 25 2015</h4>
+        <img
+          class="img2"
+          src="https://images.unsplash.com/photo-1546238232-20216dec9f72?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2068&q=80"
+          alt="dog"
+        />
+        <article>
+          <h2>This Is Another Article</h2>
+          <p class="article-p">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+            minus doloribus libero consequatur at asperiores assumenda harum
+            omnis sint, non pariatur excepturi maiores nulla quo tempora fuga.
+            Dolores, quis maiores. <br /><br />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel aliquid
+            quis culpa illum aliquam temporibus esse consequatur molestiae illo
+            voluptas est ipsam commodi minima ipsum, obcaecati harum alias a.
+            Molestias. <br />
+            <br />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+            laborum fuga neque soluta mollitia blanditiis, beatae eum omnis quas
+            enim, dicta quibusdam delectus consequatur dolorum voluptates. Quas
+            beatae autem pariatur?
+          </p>
+          <a  class="pra-end"href="#">read more </a>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <h2 class="footer">@ALTCampus2019</h2>
+      
+    </footer>
+  </body>
+</html>
